Make application more robust by catch UnresolvedaddressException